UI Fix: Update tweet icons width so that they all appear aligned

--- a/src/components/main/trendingFeeds.css
+++ b/src/components/main/trendingFeeds.css
@@ -40,9 +40,9 @@
   height: 14.802px;
   margin: 24px auto 5px;
   align-items: center;
-  gap: 35px;
+  gap: 30px;
   margin-left: 11px;
-  justify-content: space-between;
+  justify-content: flex-start;
   max-width: 280px;
 }
 
@@ -56,6 +56,7 @@
   letter-spacing: -0.3px;
   color: #72767a;
   cursor: pointer;
+  min-width: 50px;
 }
 
 .tweet-icons > * svg {
